# infiray-t2pro

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: rpi-stream-architecture.md
examples/: capture_single.py  extract_metadata.py  live_preview.py  live_preview_nuc.py  live_preview_temp.py  nuc_calibration.py  two_point_nuc.py
infiray_t2pro/: __init__.py  camera.py  commands.py  decode.py  palettes.py  processing.py  recording.py  session.py  snapshot.py  thermometry.py
tests/: test_agc.py  test_auto_nuc.py  test_camera.py  test_commands.py  test_decode.py  test_denoise.py  test_frame_validation.py  test_nuc_behavior.py  test_palettes.py  test_processing.py  test_recording.py  test_session.py  test_snapshot.py  test_stream_errors.py  test_stream_open_errors.py  test_streaming.py  test_temperature_calc.py  test_thermometry.py
